Major changes, added images to blog post, and text

--- a/src/components/blog/List.astro
+++ b/src/components/blog/List.astro
@@ -7,6 +7,7 @@ export interface Props {
 }
 
 const { posts } = Astro.props;
+console.log(posts + 'List.Astro+++++++++++++++++++++++++++++'); // Add this line to log the value of the `posts` variable
 ---
 
 <ul>
