--- a/src/components/blog/SinglePost.astro
+++ b/src/components/blog/SinglePost.astro
@@ -16,6 +16,7 @@ export interface Props {
 }
 
 const { post, url } = Astro.props;
+//console.log(post); // Add this line to log the value of the `posts` variable
 ---
 
 <section class="py-8 sm:py-16 lg:py-20 mx-auto">
