--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -128,17 +128,10 @@ const meta = {
   <!-- HighlightedPosts Widget ******* -->
 
   <LatestPosts
-    title="Find out more content in our Blog"
-    information={`The blog is used to display AstroWind documentation.
-                        Each new article will be an important step that you will need to know to be an expert in creating a website using Astro + Tailwind CSS.
-                        Astro is a very interesting technology. Thanks.
-                `}
-    postIds={[
-      'get-started-website-with-astro-tailwind-css.md',
-      'how-to-customize-astrowind-to-your-brand.md',
-      'useful-resources-to-create-websites.md',
-      'astrowind-template-in-depth.md',
-    ]}
+    title="Some of our latest projects"
+    information={`
+                For more projects please contact us.`}
+    postIds={['work1.md', ' work2.md', 'work3s.md', 'work4.md']}
   />
 
   <!-- FAQs Widget ******************* -->
